# libdecor-rs

./: AGENTS.md  Cargo.toml  README.md
c-api/: Cargo.toml  build.rs  libdecor.ld
c-api/src/: context.rs  frame.rs  lib.rs  state_config.rs  types.rs
examples/: demo.rs
src/: configuration.rs  context.rs  csd.rs  error.rs  event.rs  font.rs  frame.rs  id.rs  inner.rs  input.rs  lib.rs  shm.rs  state.rs  theme.rs
