[package]
name = "libdecor"
version = "0.1.0"
edition = "2024"
description = "Client-side decorations for Wayland, in pure Rust"
license = "MIT"

[dependencies]
rustix = { version = "1.1.4", default-features = false, features = ["shm", "fs", "mm", "event"] }
thiserror = "2.0.18"
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", default-features = false, features = ["client", "unstable"] }
